# Polymarket_bot

./: .gitignore  .ofi_focused_pytest.txt  .pytest_full_q.txt  .pytest_full_q_ra.txt  ARCHITECTURE.md  OPERATIONS.md  POR.txt  README.md  _categorize.py  _check_bal.py  _check_db.py  _check_wfo.py  _diag_approve.py  _diag_fills.py  _dynamic_step1_screener.txt  _event_hist.py  _fail_cats.py  _fix_tests.py  _forensics2_binance_started.txt  _forensics2_lifecycle.txt  _forensics2_system_health.txt  _forensics2_tail100.txt  _forensics_lifecycle.txt  _hardreset_step2_verify.txt  _hardreset_step4_grep.txt  _inspect_clob.py  _inspect_clob2.py  _inspect_clob3.py  _inspect_tick.py  _live_pipeline.py  _live_session.py  _log_census.py  _nuclear_step2_env.txt  _nuclear_step4_grep.txt  _nuclear_step4_tail.txt  _p2q.py  _patch_vacuum.py  _rejection_detail.py  _sessions.py  _signal_window.py  (+130 more)
.githooks/: pre-commit
artifacts/: clob_arb_baseline_2026-03-15_2026-03-15.json  clob_arb_baseline_2026-03-15_2026-03-19.json  exhaustion_fader_2026-03-25_scorecard.md  exhaustion_fader_baseline_2026-03-15_2026-03-16_rerun.md  exhaustion_fader_baseline_2026-03-15_2026-03-19.md  exhaustion_fader_baseline_2026-03-17_2026-03-19.md  lead_lag_maker_control_config.json  lead_lag_maker_replay_config.json  lead_lag_maker_scorecard_2026-03-03.md  reward_shadow_report_backtest.json  reward_shadow_report_backtest.md  reward_shadow_report_high_conviction.json  reward_shadow_report_high_conviction.md  vacuum_batch_backtest_candidates_2026-03-25.md  vacuum_batch_backtest_scorecard_2026-03-25.md  vacuum_maker_2026-03-25_scorecard.md  wall_jumper_2026-03-25_scorecard.md  wall_jumper_age0s_config.json  wall_jumper_age15s_2026-03-25_scorecard.md  wall_jumper_age15s_config.json  wall_jumper_age20s_2026-03-25_scorecard.md  wall_jumper_age20s_config.json  wall_jumper_age30s_2026-03-25_scorecard.md  wall_jumper_feature_importance_report_2026-04-01.md  wall_jumper_v3_2026-03-25_scorecard.md  wall_jumper_v3_oos_2026-03-15_2026-03-19_scorecard.md
config/: active_amm_targets.json  executable_neg_risk.json  hybrid_arb_universe.json  hybrid_arb_universe_balanced.json  squeeze_pairs.json  (+5 more)
(+707 files in other folders)
