[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Mean-Reversion Market Maker PoC for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.18.0",
    "web3>=6.15",
    "websockets>=12.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-telegram-bot>=21.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
polybot = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
