[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Mean-Reversion Market Maker PoC for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "py-clob-client>=0.18.0",
    "web3>=6.15",
    "websockets>=12.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-telegram-bot>=21.0",
    "click>=8.1",
    "sortedcontainers>=2.4",
    "optuna>=3.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
perf = [
    "uvloop>=0.19; sys_platform != 'win32'",
]
data = [
    "polars>=1.35",
    "pandas>=2.1",
    "pyarrow>=15.0",
]
dev = [
    "polars>=1.35",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
polybot = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
